--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ /* Copyright © 2018 Team X, CMPUT301, University of Alberta - All Rights Reserved.
+  ~ *You may use, distribute or modify this code under terms and conditions of Code of Student Behavior at
+  ~ *University of Alberta.
+  ~ *You can find a copy of the license in this project. Otherwise, please contact contact@abc.ca
+  ~ */
+  -->
+
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
